<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="71dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            />

        <TextView
            android:id="@+id/wrongInput_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_input_textview"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/regNavBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration" />
    </LinearLayout>

</FrameLayout>