<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/btn_star"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/logout_btn"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/logout" />

</menu>